<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_show_about"
          android:title="@string/action_show_about_menu_item" />
    <item android:id="@+id/action_reset_logfile"
          android:title="@string/action_reset_logfile_menu_item" />
    <item android:id="@+id/action_show_serial_console"
          android:title="@string/action_show_serial_console" />
  <!-- Leave in for debug
  	item android:id="@+id/action_show_gps_debug"
          android:title="@string/action_show_gps_debug" />
    <item android:id="@+id/action_convert_cvs_logfile"
          android:title="@string/action_convert_cvs_logfile" /> -->
    <!--  settings goes below everything except help -->
    <item android:id="@+id/action_show_settings"
          android:title="@string/action_show_settings_menu_item" />
</menu>